# ChatStory_Server_repo

./: .gitignore  Dockerfile  poetry.lock.bak  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/: main.py
app/AI/: client.py  router.py  schemas.py
app/api/v1/routers/: auth.py  story.py
app/core/: config.py  jwt.py
app/db/: mongo.py
app/redis/: queue.py
app/schemas/: story_schema.py  user_schema.py
app/services/: story_service.py  user_service.py
